# margatroid

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  uninstall.sh
boot/: Cargo.toml
boot/src/: main.rs
bridge/: Cargo.toml  SPEC.md
bridge/src/: client.rs  codec.rs  config.rs  lib.rs  oauth.rs  sse.rs  transport.rs  types.rs
cleanup/: Cargo.toml
cleanup/src/: main.rs
daemon/: Cargo.toml
daemon/src/: commands.rs  handlers.rs  main.rs
margatroid/: Cargo.toml
margatroid/src/: claude_config.rs  discovery.rs  image.rs  lib.rs  podman.rs  remote_control.rs  session.rs  state.rs  tmux.rs
orchestrator/: Cargo.toml
orchestrator/src/: claude_config.rs  discovery.rs  image.rs  lib.rs  podman.rs  remote_control.rs  session.rs  state.rs  tmux.rs
relay/: Cargo.toml
relay/src/: main.rs
systemd/: claude-daemon.service  claude-tmux.service  margatroid-daemon.service  margatroid-tmux.service  margatroid-update.service  margatroid-update.timer
tui/: Cargo.toml
tui/src/: app.rs  main.rs
tui/src/views/: confirm.rs  create.rs  detail.rs  mod.rs  rename.rs  session_list.rs
web/: Cargo.toml  PLAN-pty-interceptor.md
web/frontend/: biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
web/frontend/src/: index.html  main.ts  style.css
web/frontend/test/: reconnect.test.ts  setup.ts  viewport-first.test.ts  web.test.ts
web/src/: main.rs  pty.rs
web/static/: index.html
