[package]
name = "orchestrator-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator-daemon"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
orchestrator = { path = "../orchestrator" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
