[package]
name = "orchestrator-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator-daemon"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
orchestrator = { path = "../orchestrator" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
