[package]
name = "margatroid-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "margatroid-relay"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs", "term"] }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
