[package]
name = "orchestrator-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator-tui"
path = "src/main.rs"

[dependencies]
orchestrator = { path = "../orchestrator" }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
