[package]
name = "margatroid-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "margatroid-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["process", "signal", "fs", "term"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
margatroid = { path = "../margatroid" }
tower-http = { version = "0.6", features = ["fs"] }
